added barcode column to db and fixed contact login/logout bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,8 @@
                             <input type = "number" placeholder = "Quantity" name = "quantity" required>
                             <input type = "text" placeholder = "Size" name = "size" required>
                             <input type = "text" placeholder = "Link" name = "link" required>
-                            <input type = "number" placeholder = "Low Stock #" name = "low_stock" required></br>
+                            <input type = "number" placeholder = "Low Stock #" name = "low_stock" required>
+                            <input type = "barcode" placeholder = "Barcode" name = "link" required></br>
 
                             <div class="form-row">
                                 <label for="image">Image:</label>
