--- a/static/style.css
+++ b/static/style.css
@@ -224,6 +224,8 @@ body{
     background: rgb(224, 224, 224);
     display: flex;   
     gap: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-row {
@@ -246,40 +248,16 @@ body{
     margin-right: 5px;
 }
 
-.alert-warning {
-    padding: 12px;
-    margin-top: 20px;
-    border-radius: 3px;
-    width: 80vw;
-    font-size: 1.2rem;
-    margin-bottom: 16px;
-    background-color: rgb(247, 247, 141);
-    color: black;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-  }
-
-  .alert-error {
-    padding: 12px;
-    margin-top: 20px;
-    border-radius: 3px;
-    width: 80vw;
-    font-size: 1.2rem;
-    margin-bottom: 16px;
-    background-color: rgb(247, 247, 141);
-    color: black;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-  }
-
-  
 
 .box-photo-container.low-stock {
     border-color: red; 
 }
 
 .delete-border-container{
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
+    border: 5px solid white;
+    margin-top: 5%;
     padding: 5px;
     width: 40vw;
     margin-left: 5vw;
@@ -417,7 +395,7 @@ body{
     gap: 50px;
 }
 
-#contact-background, #about-background, #reset-background{
+#contact-background, #about-background, #reset-background, #settings-background{
     background: linear-gradient(to right, rgb(124,221,254),rgb(22,28,89));
     height: 100vh;
 }
@@ -515,3 +493,98 @@ footer {
 
     color:white;
 }
+
+
+/* SETTINGS FILE */
+.settings{
+    padding: 0 50px;
+    margin-bottom: 100px;
+    display: flex;
+    gap: 50px;
+}
+
+
+.box-border-container-2{
+    display: flex;
+    flex-direction: column;
+    border: 5px solid white;
+    margin-top: 5%;
+    padding: 5px;
+    width: 40vw;
+    margin-left: 5vw;
+    background-color: #a6b9dc; 
+    align-items: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
+}
+
+.login-input-text-2{
+    padding: 10px;
+    width: 100%;
+    height: 40px;
+    background: rgb(255, 255, 255);
+    color: black;
+    max-width: 400px;
+    margin-top: 5%;
+}
+
+.password-input-text-2{
+    padding: 10px;
+    width: 100%;
+    height: 40px;
+    background: rgb(255, 255, 255);
+    color: black;
+    max-width: 400px;
+    margin-top: 5%;
+}
+
+.font-big {
+    font-size: 2vw;
+}
+
+.table {
+    margin-top: 10px;
+    width: 100%;
+}
+
+th, td {
+    padding: 10px; 
+    font-size: 1.5vw;
+    text-align: left;
+}
+
+th {
+   font-size: 20px;
+   font-size: 1.8vw;
+   max-width: 400px;
+}
+
+.admin_button{
+    margin-top: 5%;
+    cursor: pointer;
+    width: 100%;
+    max-width:400px;
+    height: 4vw;
+    background: rgb(178, 200, 212);
+    color: rgb(0, 0, 0);
+    font-size: 1.5vw;
+    font-weight: 600;
+    margin-bottom: 2vw;
+}
+
+.alert-warning {
+    padding: 12px;
+    margin-top: 20px;
+    border-radius: 3px;
+    width: 80vw;
+    font-size: 1vw;
+    margin-bottom: 16px;
+    background-color: rgb(247, 247, 141);
+    color: black;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+  }
+
+  .alert-error {
+    color: red;
+    background-color: rgb(255, 255, 255);
+    font-family:Georgia, 'Times New Roman', Times, serif;
+  }
