--- a/templates/about.html
+++ b/templates/about.html
@@ -20,10 +20,18 @@
                 </div>
                 <div>
                     {% if admin == True %}
-                        <a href="/logout">Logout</a>
-                        {% else %}
-                        <a href="/login">Login</a>
-                        {% endif %}
+                    <!-- <a href="/logout">Logout</a> -->
+                    <form action="{{ url_for('auth.logout') }}" method="POST">
+                        <button type="submit" class="text-button">Logout</button>
+                    </form>
+                    {% else %}
+                    <a href="/login">Login</a>
+                    {% endif %}
+                </div>
+                <div>
+                    {% if admin == True %}
+                    <a href="/settings">Settings</a>
+                    {% endif %}
                 </div>
             </div>
     
