--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,9 +19,17 @@
                 </div>
                 <div>
                     {% if admin == True %}
-                    <a href="/logout">Logout</a>
+                    <!-- <a href="/logout">Logout</a> -->
+                    <form action="{{ url_for('auth.logout') }}" method="POST">
+                        <button type="submit" class="text-button">Logout</button>
+                    </form>
                     {% else %}
                     <a href="/login">Login</a>
+                    {% endif %}
+                </div>
+                <div>
+                    {% if admin == True %}
+                    <a href="/settings">Settings</a>
                     {% endif %}
                 </div>
             </div>
