--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
                             <input type = "text" placeholder = "Size" name = "size" required>
                             <input type = "text" placeholder = "Link" name = "link" required>
                             <input type = "number" placeholder = "Low Stock #" name = "low_stock" required>
-                            <input type = "barcode" placeholder = "Barcode" name = "link" required></br>
+                            <input type = "text" placeholder = "Barcode" name = "barcode" required></br>
 
                             <div class="form-row">
                                 <label for="image">Image:</label>
