Changed Settings to Admin for tab

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,7 +29,7 @@
                 </div>
                 <div>
                     {% if admin == True %}
-                    <a href="/settings">Settings</a>
+                    <a href="/admin">Admin</a>
                     {% endif %}
                 </div>
             </div>
