--- a/templates/admin.html
+++ b/templates/admin.html
@@ -47,7 +47,7 @@
                 </div>
                 <div>
                     {% if admin == True %}
-                    <a href="/settings">Settings</a>
+                    <a href="/admin">Admin</a>
                     {% endif %}
                 </div>
             </div>
