--- a/templates/admin.html
+++ b/templates/admin.html
@@ -85,29 +85,20 @@
                             <tr>
                                 <td>{{ user.email }}</td>
                                 <td>
-                                    <form method="POST" action="{{ url_for('main.delete_admin', user_id=user.id) }}" onsubmit="return confirmDelete(event)">
+                                    <form class = "remove-form" method="POST" action="{{ url_for('main.delete_admin', user_id=user.id) }}">
                                         <input type="submit" class = "admin_button" value="Remove 🗑️">
                                     </form>
                                 </td>
                             </tr>
                             {% endfor %}
                         </tbody>
-                        <script>
-                            function confirmDelete(event) {
-                                event.preventDefault();
-                        
-                                const isConfirmed = confirm("Do you want to delete this admin?");
-                        
-                                if (isConfirmed) {
-                                    event.target.submit(); 
-                                }
-                            }
-                        </script>
                     </table>
                 </div>
                 {% endif %}
             </div>
         </div>
+        
+        <script src="../static/script.js"></script>
 
     </body>
 
