google authentification implemented

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
                         Name: {{ box.name }}<br>
                         Quantity: {{ box.quantity }}<br>
                         Size: {{ box.size }}<br>
-                        Link: {{ box.link }}
+                        Link: <a href = "{{ box.link }}">{{ box.link }}</a>
                     </div>
                 </div>
                 {% endfor %}
