--- a/static/style.css
+++ b/static/style.css
@@ -402,6 +402,36 @@ body{
     height: 100vh;
 }
 
+.contact-title
+{
+    font-family: "Libre Franklin";
+    text-align: center;
+    font-size: 2vw;
+    color: blue;
+    font-weight: bold;
+    background: white;
+    padding: 0 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0 150px;
+    border: 2px solid black;
+    border-bottom: 0px;
+}
+
+.contact-body
+{
+    font-family: "Libre Franklin";
+    text-align: center;
+    font-size: 1vw;
+    background: white;
+    padding: 0 50px;
+    padding-bottom: 10px;
+    margin: 0 150px;
+    margin-bottom: 10px;
+    border: 2px solid black;
+    border-top: 0px;
+}
+
 .contact form{
     flex: 3;
     display: flex;
