google button instead of password reset

--- a/templates/login.html
+++ b/templates/login.html
@@ -65,8 +65,8 @@
                         </form>
 
                         <div id="login-input-container">
-                            Forgot your password? 
-                            <a href="/reset" class = "underline">Click here to reset.</a>
+                            Sign in with Google:
+                            <a href="/login_g" class = "underline">Click Here.</a>
                         </div>
                         
                     </div>
