--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -60,7 +60,7 @@
         </div>
         
         
-        <div id=body-background>
+        <div id=admin-body-background>
             <ul>
                 {% if admin == True %}
                 <div class="barcode-input">
