--- a/website/static/style.css
+++ b/website/static/style.css
@@ -23,7 +23,11 @@ a {
     text-decoration: none;
 }
 
-
+.link-color{
+    color: blue; 
+    text-decoration: underline;
+    font-family: 'Times New Roman', Times, serif;
+}
 
 body{
     margin: 0px;
@@ -146,13 +150,24 @@ body.admin{
     color: black;
 }
 
+#input-text{
+    width: 20vw;               
+    height: 4vh;             
+    color: black;             
+    font-size: 10px;          
+    border: 2px solid rgb(209, 209, 209);
+    border-radius: 5px;       
+    padding: 5px;  
+    font-family: "Libre Franklin";
+}
+
 .barcode_container{
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.scan_button{
+/* .scan_button{
     width: 10%;               
     height: 4vh; 
     cursor: pointer;
@@ -160,7 +175,7 @@ body.admin{
     background: blue;
     color: white;
     font-weight: 600;
-}
+} */
 
 .box-title{
     color: black;
@@ -175,6 +190,7 @@ body.admin{
 
 .box-side-by-side-container{ 
     display: flex;
+    flex-direction: row;
     justify-content: flex-start;
     width: 100%;
     height: 100%;
@@ -196,10 +212,19 @@ body.admin{
     min-width: 130px;
 }
 
+.side-container{
+    display:flex;
+    flex-direction:column;
+    flex:1;
+}
+
 .box-info-container{
+    flex:2;
     border: 5px solid rgb(13, 32, 128);
     padding: 5px;
-    width: 57vw;
+    width: 100%;
+    margin: 0 20px;
+    word-break: break-all; 
 }
 
 #body-background{
@@ -259,6 +284,7 @@ body.admin{
     display: flex;         
     align-items: center; 
     margin-right: 5px;
+    margin-left: 5vw;
 }
 
 
@@ -383,16 +409,15 @@ body.admin{
 }
 
 .submit_button{
-    margin-top: 5%;
     cursor: pointer;
     width: 100%;
     max-width:400px;
-    height: 4vw;
+    height: 3vh;
     background: blue;
     color: white;
-    font-size: 2vw;
+    padding: 0 10px;
+    margin-left:5px;
     font-weight: 600;
-    margin-bottom: 2vw;
 }
 
 .underline{
