--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -68,7 +68,7 @@
                     <div class = "barcode_container">
                         <form method = "POST" action = "{{ url_for('main.scan_box')}}">
                             <input type = "text" name = "barcode" id = "barcode-text">
-                            <input type = "submit" value = "Scan" class = "scan_button">
+                            <!-- <input type = "submit" value = "Scan" class = "scan_button"> -->
                         </form>
                     </div>
                 </div>
@@ -107,28 +107,29 @@
                     </div>
 
                     <div class="box-side-by-side-container">
-                        <div class="box-photo-container">
-                            <img src="/static/images/{{  box.image }}" alt="Wrong file path">
+                        <div class = "side-container">
+                            <div class="box-photo-container">
+                                <img src="/static/images/{{  box.image }}" alt="Wrong file path">
+                            </div>
+                            
+                            {% if admin == True %}
+                            <div class="box-update-container">
+                                <form class="update-form" data-box-id="{{ box.id }}">
+                                    <input type="number" placeholder="Enter # to + or -" id = "input-text" name="quantity" required >
+                                    <input type="submit" value="Submit" class = "submit_button">
+                                </form>
+    
+                                <form class="delete-form" data-box-id="{{ box.id }}">
+                                    <input type="submit" value="Delete Box" class = "submit_button">
+                                </form>
+                            </div>
+                            {% endif %}
                         </div>
-                        
-                        {% if admin == True %}
-                        <div class="box-update-container">
-                            <form class="update-form" data-box-id="{{ box.id }}">
-                                <input type="number" placeholder="Enter # to + or -" name="quantity" required>
-                                <input type="submit" value="Submit">
-                            </form>
-
-                            <form class="delete-form" data-box-id="{{ box.id }}">
-                                <input type="submit" value="Delete Box">
-                            </form>
-                        </div>
-                        {% endif %}
-
                         <div class="box-info-container">
                             Name: {{ box.name }}<br>
                             Quantity: <span class="box-quantity">{{ box.quantity }}</span><br>
                             Size: {{ box.size }}<br>
-                            Link: <a href="{{ box.link }}">{{ box.link }}</a>
+                            Link: <a href="{{ box.link }}" class = "link-color">{{ box.link }}</a>
                         </div>
                     </div>
                 </div>
