--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -61,7 +61,7 @@
                                     <img src = "./static/images/eye-slash-regular.svg" alt = "Show Password"/>
                                 </button>
                             </div>
-                            <input type="submit" class ="submit_button" value="Login">
+                            <input type="submit" class ="login_button" value="Login">
                         </form>
 
                         <div id="login-input-container">
