--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
     </head>
     
     <body>
@@ -65,6 +66,12 @@
                 {% if admin == True %}
                 <div class="barcode-input">
                     <label for="barcode-text"><b>Scan Box Barcode Here</b></label>
+                    <div id="reader" style="width: 300px; margin: auto;"></div>
+                    <div id="scan-result" style="margin-top: 10px; font-size: 18px; color: green;"></div>
+                    <div class="scanner-controls">
+                        <button id="start-scanner" class="scanner-button">Start Scanner</button>
+                        <button id="stop-scanner" class="scanner-button">Stop Scanner</button>
+                    </div>
                     <div class = "barcode_container">
                         <form method = "POST" action = "{{ url_for('main.scan_box')}}">
                             <input type = "text" name = "barcode" id = "barcode-text">
