--- a/website/static/style.css
+++ b/website/static/style.css
@@ -287,6 +287,11 @@ body.admin{
     margin-left: 5vw;
 }
 
+.button-group {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 
 .box-photo-container.low-stock {
     border-color: red; 
