--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -23,7 +23,7 @@
         </script>
     </head>
 
-    <body class = "admin">
+    <body>
         <div id="settings-background">
 
             <div class="top-bar">
